--- a/src/style/Customer_review_list.module.css
+++ b/src/style/Customer_review_list.module.css
@@ -274,8 +274,7 @@
   border: 2px solid #293462;
 }
 
-.numlist {
-  /* border: 1px solid #000; */
+/* .numlist {
   width: 1200px;
   margin-top: 30px;
   margin: auto;
@@ -308,7 +307,7 @@
   margin-left: 1rem;
   background: #f7be16;
   color: black;
-}
+} */
 
 /* .explantext {
   margin-top: 14%;
