--- a/src/style/Mypage_info.module.css
+++ b/src/style/Mypage_info.module.css
@@ -7,10 +7,11 @@
   display: flex;
   justify-content: center; /* 수평 가운데 정렬 */
   align-items: center;
+  margin-top: 50px;
 }
 
 .myinfocontain {
-  width: 800px;
+  width: 1200px;
   margin: 0 auto;
 }
 
@@ -21,21 +22,24 @@
 }
 
 .hline {
-  width: 800px;
+  width: 1200px;
   border: 2px solid #293462; /* 수평선의 두께와 색상을 설정합니다. */
   margin: 20px 0; /* 수평선 위아래 여백을 조절합니다. */
 }
 
 .infocontainer {
+  /* border: 1px solid #000; */
+  /* display: inline-block; */
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  margin-left: 8rem;
 }
 
 .infolist {
-  margin-bottom: 10px; /* 각 infolist 요소 사이의 간격을 조절합니다. */
+  margin-bottom: 10px;
+  font-weight: bold; /* 각 infolist 요소 사이의 간격을 조절합니다. */
 }
+
 .addrnumfind {
   display: inline-block;
   height: 38px;
@@ -48,61 +52,70 @@
   cursor: pointer;
   font-size: 14px;
   transition: background-color 0.3s ease; /* 배경색 전환 효과 */
-
   border: 0;
   font-weight: 900;
-  margin-left: 5px;
+  margin-left: 10px;
 }
 
 .addrnumfind:hover {
   background-color: #f7be16; /* 마우스 호버 시 배경색 변경 */
   color: #293462;
-
   border: 0;
   font-weight: 900;
 }
 
-.infoblock {
-  margin-bottom: 2rem;
+.infoblock_wrap{
+/* border: 1px solid blue; */
+margin: auto;
 }
+
+.infoblock {
+  /* display: inline-block; */
+  /* border: 1px solid #000; */
+  margin-bottom: 1rem;
+}
+
 .addr_input {
   display: inline-block;
-  width: 400px; /* 원하는 너비 */
-  height: 38px; /* 원하는 높이 */
+  width: 495px; /* 원하는 너비 */
+  height: 40px; /* 원하는 높이 */
   padding: 10px 20px;
   font-size: 15px;
-  border: 1px solid #000000; /* 굵기, 스타일, 색상 순서대로 지정 */
+  /* border: 1px solid #000000; 굵기, 스타일, 색상 순서대로 지정 */
   /* border: 1px solid #000; */
   margin: auto; /*중앙 정렬*/
   margin-bottom: 1rem;
-
-  border: 2px solid #f5f5f5; /* 테두리 스타일과 색상 */
+  border: 1px solid #dedfe0; /* 테두리 스타일과 색상 */
   border-radius: 5px; /* 테두리의 둥근 정도 */
   background-color: #f5f5f5; /* 배경색 */
 }
 
 .textbox {
   display: inline-block;
-  width: 500px; /* 원하는 너비 */
-  height: 38px; /* 원하는 높이 */
+  width: 600px; /* 원하는 너비 */
+  height: 40px; /* 원하는 높이 */
   padding: 10px 20px;
   font-size: 15px;
-  border: 1px solid #000000; /* 굵기, 스타일, 색상 순서대로 지정 */
+  /* border: 1px solid #000000; 굵기, 스타일, 색상 순서대로 지정 */
   /* border: 1px solid #000; */
   margin: auto; /*중앙 정렬*/
-  margin-bottom: 10px;
-
-  border: 2px solid #f5f5f5; /* 테두리 스타일과 색상 */
+  border: 1px solid #dedfe0; /* 테두리 스타일과 색상 */
   border-radius: 5px; /* 테두리의 둥근 정도 */
-  background-color: #f5f5f5; /* 배경색 */
+  background-color: #f5f5f5 /* 배경색 */
+}
+
+.modify_wrap{
+  /* border: 1px solid #000; */
+  width: 1200px;
+  margin: auto;
+  text-align: center;
+  margin-top: 30px;
 }
 
 .modify {
-  width: 500px; /* 원하는 너비 */
-  height: 40px; /* 원하는 높이 */
-  display: flex;
-  margin: 0 auto;
-  margin-left: 6rem;
+  margin: auto;
+  width: 600px; /* 원하는 너비 */
+  height: 60px; /* 원하는 높이 */
   display: inline-block;
   border-radius: 10px; /* 반원 형태를 만들기 위해 큰 값 사용 */
   background-color: #293462; /* 버튼 배경색 */
@@ -110,11 +123,10 @@
   text-align: center;
   text-decoration: none;
   cursor: pointer;
-  font-size: 14px;
+  font-size: 16px;
   transition: background-color 0.3s ease; /* 배경색 전환 효과 */
   border: 0;
-  font-weight: 900;
-  margin-left: 8rem;
+  font-weight: 600;
 }
 
 .modify:hover {
