--- a/src/style/Notice_main.module.css
+++ b/src/style/Notice_main.module.css
@@ -178,7 +178,7 @@
 
 /* button */
 
-.notice .numBtn {
+/* .notice .numBtn {
   display: inline-block;
   width: 50px;
   height: 40px;
@@ -198,7 +198,7 @@
   background: #f7be16;
   color: #000000;
   transition: 0.2s;
-}
+} */
 
 /* 코드 추가 부분 */
 a {
