--- a/src/style/Join.module.css
+++ b/src/style/Join.module.css
@@ -22,6 +22,7 @@
   font-weight: bolder;
   display: grid;
   place-items: center;
+  margin-top: 50px;
 }
 
 .Join_body.form_el {
@@ -39,10 +40,10 @@
   margin: 0%; /* 어떻게 간격을 줄여서 두 텍스트 박스를 붙일 수 있을지 모르겠음 */
 }
 
-.Join_body .h3 {
+.Join_body h3 {
   justify-content: center;
   text-align: center;
-  font-size: 30px;
+  font-size: 25px;
   display: flex;
   align-items: center;
   margin: auto;
@@ -65,15 +66,14 @@
   width: 307px; /* 원하는 너비 */
   height: 20px; /* 원하는 높이 */
   padding: 10px 20px;
-  font-size: 15px;
-  border: 1px solid #000000; /* 굵기, 스타일, 색상 순서대로 지정 */
+  font-size: 15px;/* 굵기, 스타일, 색상 순서대로 지정 */
   /* border: 1px solid #000; */
   margin: auto; /*중앙 정렬*/
   margin-bottom: 10px;
-
-  border: 2px solid #f5f5f5; /* 테두리 스타일과 색상 */
+  border: 1px solid #dedfe0; /* 테두리 스타일과 색상 */
   border-radius: 5px; /* 테두리의 둥근 정도 */
-  background-color: #f5f5f5; /* 배경색 */
+  background-color: #f5f5f5; 
+  margin-top: 10px;/* 배경색 */
 }
 
 .form_el > label:nth-last-child(n) {
@@ -92,13 +92,13 @@
   height: 20px; /* 원하는 높이 */
   padding: 10px 20px;
   font-size: 15px;
-  border: 1px solid #000000; /* 굵기, 스타일, 색상 순서대로 지정 */
   /* border: 1px solid #000; */
   margin: auto; /*중앙 정렬*/
   margin-bottom: 20px;
-  border: 2px solid #f5f5f5; /* 테두리 스타일과 색상 */
+  border: 1px solid #dedfe0;  /* 테두리 스타일과 색상 */
   border-radius: 5px; /* 테두리의 둥근 정도 */
-  background-color: #f5f5f5; /* 배경색 */
+  background-color: #f5f5f5;
+  margin-top: 10px; /* 배경색 */
 }
 
 .id_confirm,
@@ -140,17 +140,17 @@
   border-radius: 10px; /* 반원 형태를 만들기 위해 큰 값 사용 */
   background-color: #293462; /* 버튼 배경색 */
   color: #fff; /* 텍스트 색상 */
-  font-weight: 900;
+  font-weight: bold;
   text-align: center;
   text-decoration: none;
   cursor: pointer;
   transition: background-color 0.3s ease; /* 배경색 전환 효과 */
   margin: auto; /*중앙 정렬*/
+  font-size: 16px;
 }
 
 .Join_body .form .join:hover {
   background-color: #f7be16; /* 마우스 호버 시 배경색 변경 */
   color: #000000;
-  font-weight: 1200;
   border: 0;
 }
