--- a/src/style/Login.module.css
+++ b/src/style/Login.module.css
@@ -7,7 +7,6 @@
 
 .login_body {
   border-radius: 20px;
-  padding-top: 130px;
   background: #fff;
   text-align: center;
   /* position: absolute; */
@@ -15,6 +14,7 @@
   left: 50%;
   transform: translate(-50%, -50%); */
   margin: 0 auto;
+  margin-top: 70px;
 }
 
 .login_form {
@@ -55,8 +55,7 @@
   /* border: 1px solid #000; */
   margin: auto; /*중앙 정렬*/
   margin-bottom: 20px;
-
-  border: 2px solid white; /* 테두리 스타일과 색상 */
+  border: 1px solid #dedfe0; /* 테두리 스타일과 색상 */
   border-radius: 5px; /* 테두리의 둥근 정도 */
   background-color: white; /* 배경색 */
 }
@@ -71,14 +70,14 @@
   /* border: 1px solid #000; */
   margin: auto; /*중앙 정렬*/
   margin-bottom: 20px;
-
-  border: 2px solid white; /* 테두리 스타일과 색상 */
+  border: 1px solid #dedfe0; /* 테두리 스타일과 색상 */
   border-radius: 5px; /* 테두리의 둥근 정도 */
   background-color: white; /* 배경색 */
 }
 
 .login_form .login_tit {
   text-align: left;
+  font-size: 21px;
 }
 
 .login_form .login_label {
@@ -94,24 +93,27 @@
 
 .login_form .login_comple {
   display: inline-block;
-  padding: 10px 105px;
+  height: 45px;
   border-radius: 10px; /* 반원 형태를 만들기 위해 큰 값 사용 */
+  border: 2px solid #293462;
   background-color: #293462; /* 버튼 배경색 */
   color: #fff; /* 텍스트 색상 */
   text-align: center;
   text-decoration: none;
   cursor: pointer;
-  transition: 0.2s; /* 배경색 전환 효과 */
+  transition: 0.3s; /* 배경색 전환 효과 */
   margin: auto; /*중앙 정렬*/
-
+  font-size: 15px;
   width: 100%;
+  margin-top: 20px;
+  margin-bottom: -10px;
 }
 
 .login_form .login_comple:hover {
+  border: 2px solid #f7be16;
   background-color: #f7be16; /* 마우스 호버 시 배경색 변경 */
   color: #000000;
   font-weight: bold;
-
   transition: 0.2s;
 }
 
@@ -122,7 +124,7 @@
 
 .login_form .go_join {
   display: inline-block;
-  padding: 10px 100px;
+  height: 45px;
   border-radius: 10px; /* 반원 형태를 만들기 위해 큰 값 사용 */
   /* border-color: #293462; */
   border: 2px solid #293462;
@@ -130,18 +132,23 @@
   text-align: center;
   text-decoration: none;
   cursor: pointer;
-  transition: 0.2s; /* 배경색 전환 효과 */
+  transition: 0.3s; /* 배경색 전환 효과 */
   margin: auto; /*중앙 정렬*/
-
   width: 100%;
   font-size: 13px;
   font-weight: bold;
   color: black;
 }
 
-.login_form .go_join:hover {
-  background-color: #f7be16; /* 마우스 호버 시 배경색 변경 */
-  color: #ffffff;
+.go_join span{
+  display: inline-block;
+margin-top: 10px;
+font-size: 15px;
+}
 
+.login_form .go_join:hover {
+  border: 2px solid #f7be16;
+  background-color: #f7be16; /* 마우스 호버 시 배경색 변경 */
+  color: #000;
   transition: 0.2s;
 }
