--- a/src/style/Customer_review_list.module.css
+++ b/src/style/Customer_review_list.module.css
@@ -274,6 +274,11 @@
   border: 2px solid #293462;
 }
 
+.rating_box {
+  position: absolute;
+  left: 75%;
+}
+
 /* .numlist {
   width: 1200px;
   margin-top: 30px;
@@ -331,4 +336,3 @@
   font-size: 15px;
   color: #c7c4c4;
 } */
-
