--- a/src/style/Mypage_info.module.css
+++ b/src/style/Mypage_info.module.css
@@ -64,9 +64,9 @@
   font-weight: 900;
 }
 
-.infoblock_wrap{
-/* border: 1px solid blue; */
-margin: auto;
+.infoblock_wrap {
+  /* border: 1px solid blue; */
+  margin: auto;
 }
 
 .infoblock {
@@ -101,10 +101,10 @@ margin: auto;
   margin: auto; /*중앙 정렬*/
   border: 1px solid #dedfe0; /* 테두리 스타일과 색상 */
   border-radius: 5px; /* 테두리의 둥근 정도 */
-  background-color: #f5f5f5 /* 배경색 */
+  background-color: #f5f5f5; /* 배경색 */
 }
 
-.modify_wrap{
+.modify_wrap {
   /* border: 1px solid #000; */
   width: 1200px;
   margin: auto;
@@ -132,4 +132,77 @@ margin: auto;
 .modify:hover {
   background-color: #f7be16; /* 마우스 호버 시 배경색 변경 */
   color: #293462;
+}
+
+/* modal 관련 스타일 지정 */
+.modal {
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.modalContent {
+  height: 55%;
+}
+
+.modalHeader {
+  font-size: 36px;
+  margin-bottom: 5px;
+}
+.modalInfo {
+  color: rgb(109, 109, 109);
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+
+.modalInput {
+  border: 0;
+  border-radius: 5px;
+  margin-bottom: 15px;
+  padding-left: 5px;
+  width: 100%;
+  height: 30px;
+  box-shadow: 1px 1px 5px gray;
+}
+
+.modalBtnWrap {
+  display: flex;
+  justify-content: space-between;
+}
+
+.modalCancel,
+.modalConfirm {
+  width: 49%;
+  height: 30px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.modalCancel {
+  background-color: white;
+  border-radius: 5px;
+  border: 2px solid var(--cancel-color);
+
+  transition: 0.3s;
+}
+.modalCancel:hover {
+  color: white;
+  background-color: var(--cancel-color);
+  transition: 0.3s;
+}
+
+.modalConfirm {
+  background-color: var(--main-color);
+  border-radius: 5px;
+  border: 2px solid var(--main-color);
+  color: white;
+
+  transition: 0.3s;
+}
+.modalConfirm:hover {
+  color: black;
+  background-color: var(--sub-color);
+  border: 2px solid var(--sub-color);
+  transition: 0.3s;
 }
