--- a/src/style/Manager_member.module.css
+++ b/src/style/Manager_member.module.css
@@ -38,31 +38,31 @@
   text-align: left;
   text-align: center;
 }
-.member_wrap th:nth-child(1) {
+/* .member_wrap th:nth-child(1) {
   width: 50px;
-}
-.member_wrap th:nth-child(2) {
+} */
+.member_wrap th:nth-child(1) {
   width: 130px;
 }
-.member_wrap th:nth-child(3) {
+.member_wrap th:nth-child(2) {
   width: 150px;
 }
-.member_wrap th:nth-child(4) {
+.member_wrap th:nth-child(3) {
   width: 170px;
 }
-.member_wrap th:nth-child(5) {
+.member_wrap th:nth-child(4) {
   width: 180px;
 }
-.member_wrap th:nth-child(6) {
+.member_wrap th:nth-child(5) {
   width: 200px;
 }
-.member_wrap th:nth-child(7) {
+.member_wrap th:nth-child(6) {
   width: 140px;
 }
-.member_wrap th:nth-child(8) {
+.member_wrap th:nth-child(7) {
   width: 90px;
 }
-.member_wrap th:nth-child(9) {
+.member_wrap th:nth-child(8) {
   width: 90px;
 }
 .member_wrap tr:first-child th:first-child {
