--- a/src/style/Control_main.module.css
+++ b/src/style/Control_main.module.css
@@ -291,12 +291,12 @@
 }
 .location {
   font-style: bolder;
+  text-align: center;
   border: none;
   width: 180px; /* 원하는 너비 */
   height: 30px; /* 원하는 높이 */
   background-color: #f5f5f5;
   border-radius: 10px;
-  padding-left: 5px;
 }
 
 .time {
@@ -339,7 +339,8 @@
   margin-top: 20px;
 }
 
-.station {
+.station,
+.carOption {
   border: 1px solid #dedfe0;
   width: 260px;
   height: 40px;
@@ -479,4 +480,13 @@
   margin-bottom: 10px;
   font-weight: 400;
   color: #4d4d4d;
+}
+
+/* 차량 선택 옵션 */
+.carOptWrap {
+  text-align: center;
+  margin-top: 22px;
+}
+.carOption {
+  margin: 0 auto;
 }
