chor: 배터리 잔량 표기

--- a/src/style/Control_main.module.css
+++ b/src/style/Control_main.module.css
@@ -490,3 +490,12 @@
 .carOption {
   margin: 0 auto;
 }
+
+.batWrap {
+  display: flex;
+  align-items: center;
+}
+.batWrap p {
+  display: inline-block;
+  font-weight: bold;
+}
