--- a/src/style/Manager_reserv.module.css
+++ b/src/style/Manager_reserv.module.css
@@ -100,12 +100,10 @@
   padding: 10px;
 }
 
-/* .num {
-  padding-left: 3%;
-  font-size: 15px;
+.num {
   font-weight: 600;
 }
-
+/*
 .reservnum {
   font-size: 15px;
   font-weight: 600;
